--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -669,7 +669,7 @@ input, select, textarea {
 		}
 
 			.image.left img, .image.right img {
-				width: 100%;
+				width:100%;
 			}
 
 		.image.left {
@@ -701,7 +701,7 @@ input, select, textarea {
 		}
 
 			.image.main img {
-				width: 100%;
+				width:100%;
 			}
 
 		@media screen and (max-width: 736px) {
@@ -1140,9 +1140,12 @@ input, select, textarea {
 			-ms-transition-delay: 0.75s;
 			transition-delay: 0.75s;
 			background-image: linear-gradient(to top, rgba(19, 21, 25, 0.5), rgba(19, 21, 25, 0.5)), url("../../images/overlay.png");
-			background-size: auto, 256px 256px;
-			background-position: center, center;
-			background-repeat: no-repeat, repeat;
+			background-size: auto,
+ 256px 256px;
+			background-position: center,
+ center;
+			background-repeat: no-repeat,
+ repeat;
 			z-index: 2;
 		}
 
